--- a/Day 15 - LocalStorage/style.css
+++ b/Day 15 - LocalStorage/style.css
@@ -60,7 +60,7 @@ h2 {
 }
 
 .plates input + label:before {
-  content: '⬜️';
+  content: '⚪';
   margin-right: 10px;
 }
 
@@ -72,8 +72,15 @@ h2 {
   margin-top: 20px;
 }
 
-.add-items input {
+.add-items input,
+button {
   padding: 10px;
   outline: 0;
   border: 1px solid rgba(0,0,0,0.1);
+}
+
+.buttons-row {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
 }
